# Linear-Regressions

./: linear_regression.ipynb  pyproject.toml
