[tool.poetry]
name = "linear-regression"
version = "0.1.0"
description = ""
authors = ["YahyaOmari <yahya.omari@outlook.com>"]

[tool.poetry.dependencies]
python = "^3.9"
matplotlib = "^3.4.2"
pandas = "^1.2.4"
sklearn = "^0.0"
seaborn = "^0.11.1"
statsmodels = "^0.12.2"
jupyterlab = "^3.0.16"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
